# k-beri-project

./: CMakeLists.txt  README.md  main.c
.github/workflows/: cmake-single-platform.yml
include/: file.h  init.h  logic.h  models.h  ui.h
src/: file.c  init.c  logic.c  ui.c
